objects/sansancard__ScanToSalesforce_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>sansancard__AccountRecordType__c</fullName>
        <label>AccountRecordType</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sansancard__AccountValue__c</fullName>
        <label>AccountValue</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sansancard__ContactRecordType__c</fullName>
        <label>ContactRecordType</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sansancard__ContactValue__c</fullName>
        <label>ContactValue</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sansancard__DisableAllCards__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable &quot;All cards&quot;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sansancard__DisableDisplayReport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable&quot;DisplayReport&quot;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sansancard__DisplayAllDeleteCards__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Display&quot;AllDeleteCards&quot;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sansancard__DisplayReportId__c</fullName>
        <label>DisplayReportId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sansancard__DisplayReportName__c</fullName>
        <label>DisplayReportName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sansancard__EnableNotification__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sansancard__Enable_Contact__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable &quot;Move to Contact&quot;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sansancard__Enable_EditFields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable &quot;Edit fields&quot;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sansancard__LeadRecordType__c</fullName>
        <label>LeadRecordType</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sansancard__LeadValue__c</fullName>
        <label>LeadValue</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sansancard__TransferDest__c</fullName>
        <label>Transfer destination</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <label>ScanToSalesforce Setting</label>
</CustomObject>